# nules-algo2

./: .gitignore
first-lab/: Cargo.toml
first-lab/src/: main.rs  sort_methods.rs
fourth-lab/: Cargo.toml
fourth-lab/src/: linked_list.rs  main.rs
independent-work/front/: .prettierrc  bun.lockb  package.json
independent-work/front/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  types.ts
independent-work/front/src/routes/about-me/: +page.svelte
independent-work/front/src/routes/history/: +page.server.ts  +page.svelte
independent-work/front/src/routes/sort-stats/: +page.server.ts  +page.svelte
independent-work/server/: Cargo.toml
independent-work/server/src/: configure.rs  history.rs  insert.rs  main.rs
independent-work/server/src/sort/: insertion.rs  merge.rs  mod.rs  quicksort.rs  selection.rs
lab5/: Cargo.toml
lab5/src/: binary_tree.rs  main.rs
second-lab/: Cargo.toml
second-lab/src/: main.rs  sort.rs
third-lab/: Cargo.toml
third-lab/front/: bun.lockb  package.json
third-lab/server/src/sort/: bubble.rs
third-lab/src/: main.rs
third-lab/src/sort/: merge.rs  mod.rs  quicksort.rs
